tests/rosetta/transpiler/Lua/arithmetic-evaluation.error
error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/arithmetic-evaluation.mochi:38:29: unexpected token "," (expected ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/arithmetic-evaluation.mochi:38:29

 38 |   return (parseIntStr(token), p)
    |                             ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.